Git Account Registration Plugin